@@ -36,6 +36,7 @@ For a detailed view of what has changed, refer to the {url-repo}/commits/main[co
 
 === Fixed
 
+* Preserve text of dlist item for tab if item has both text and blocks (#13)
 * Honor explicit ID on tabs block and use it as ID prefix for tabs
 * Register reference for tabset in document catalog
 * Autogenerate IDs for tabsets and tabs in a manner consistent with section ID generation (#2)
